## 0.2.0 / 2019-03-22

* [FEATURE] Add metrics of HTTP response size in bytes.
* [ENHANCEMENT] Make the label names of Prometheus recorder configurable.

## 0.1.0 / 2019-03-18

* [FEATURE] Add gorestful compatible middleware.
* [FEATURE] Add httprouter compatible middleware.
* [FEATURE] Add Negroni compatible middleware.
* [FEATURE] Add option to group by status codes.
* [FEATURE] Add predefined handler label.
* [FEATURE] Add URL infered handler label.
* [FEATURE] Add middleware.
* [FEATURE] Add HTTP latency requests.
* [FEATURE] Add Prometheus recorder.